--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,7 +2,7 @@
   "name": "motive-homecare-login",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://JLuisNG.github.io/IA-VS/",
+  "homepage": "https://jluisng.github.io/IA-V5/",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
