--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,17 +10,20 @@
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "@tinymce/tinymce-react": "^6.1.0",
     "chart.js": "^4.4.8",
     "framer-motion": "^12.5.0",
     "gsap": "^3.12.7",
     "lucide-react": "^0.487.0",
     "react": "^18.3.1",
+    "react-beautiful-dnd": "^13.1.1",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
     "react-fireworks": "^1.0.4",
     "react-rain-animation": "^1.0.4",
     "react-router-dom": "^6.29.0",
     "react-scripts": "^5.0.1",
+    "react-signature-canvas": "^1.1.0-alpha.2",
     "react-transition-group": "^4.4.5",
     "sass": "^1.85.1",
     "styled-components": "^6.1.8",
